Changed hover background and ring color

--- a/agency-custom.css
+++ b/agency-custom.css
@@ -15,15 +15,15 @@
 :root {
     --nav-menus-background-color: #090516 !important;
     --nav-menu-text-color: rgb(255, 255, 255) !important;
-    --nav-menu-icon-color: #4d26b3 !important;
-    --nav-hover-background-color: #b1e82d !important;
-    --location-switcher-background-color: #76bbff !important;
-    --sidebar-agency-back-button: #76bbff !important;
+    --nav-menu-icon-color: #b1e82d !important;
+    --nav-hover-background-color: #007ef5 !important;
+    --location-switcher-background-color: #6b57ff !important;
+    --sidebar-agency-back-button: #6b57ff !important;
     --card-header-background-color: #ffffff !important;
     --card-header-text-color: #000 !important;
-    --button-background-color: #b1e82d !important;
+    --button-background-color: #007ef5 !important;
     --button-text-color: #000 !important;
-    --tw-ring-color: #b1e82d !important;
+    --tw-ring-color: #007ef5 !important;
     --dashboard-time-and-date-color: #000 !important;
     --sb-divider-background-color: #007ff500 !important;
 }
